Fix scrollbar flashing

--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,10 @@
+html{
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
+::-webkit-scrollbar{ /* Chromium */
+	display: none;
+}
 html, body {
 	position: relative;
 	width: 100%;
